--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,35 @@ version: "2"
 services:
   web:
     image: python:3
-    ports:
-     - 80:80
     volumes:
       - ./web:/app/src
+    env_file: web.env
+    expose:
+      - "80"
     working_dir: /app/src
     command: python3 -m http.server --bind 0.0.0.0 80
+  nginx:
+    image: nginx
+    container_name: nginx
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      - nginx_conf:/etc/nginx/conf.d
+      - nginx_vhost:/etc/nginx/vhost.d
+      - nginx_html:/usr/share/nginx/html
+      - nginx_certs:/etc/nginx/certs:ro
+  nginx_gen:
+     image: jwilder/docker-gen
+     container_name: nginx_gen
+     volumes_from:
+      - nginx
+     volumes:
+       - ./nginx-proxy/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
+       - /var/run/docker.sock:/tmp/docker.sock:ro
+     command: ["-notify-sighup", "nginx", "-watch", "-wait", "5s:30s", "/etc/docker-gen/templates/nginx.tmpl", "/etc/nginx/conf.d/default.conf"]
+volumes:
+  nginx_conf: {}
+  nginx_vhost: {}
+  nginx_html: {}
+  nginx_certs: {}
