--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,17 @@ services:
      volumes:
        - ./nginx-proxy/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
        - /var/run/docker.sock:/tmp/docker.sock:ro
-     command: ["-notify-sighup", "nginx", "-watch", "-wait", "5s:30s", "/etc/docker-gen/templates/nginx.tmpl", "/etc/nginx/conf.d/default.conf"]
+     command: ["-notify-sighup", "nginx", "-watch", "-wait", "5s:30s", "/etc/docker-gen/templates/nginx.tmpl", \
+               "/etc/nginx/conf.d/default.conf"]
+  letsencrypt:
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    environment:
+      NGINX_DOCKER_GEN_CONTAINER: nginx_gen
+    volumes_from:
+      - nginx
+    volumes:
+      - nginx_certs:/etc/nginx/certs:rw
+      - /var/run/docker.sock:/var/run/docker.sock:ro
 volumes:
   nginx_conf: {}
   nginx_vhost: {}
