--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
        - /var/run/docker.sock:/tmp/docker.sock:ro
      command: ["-notify-sighup", "nginx", "-watch", "-wait", "5s:30s", "/etc/docker-gen/templates/nginx.tmpl", \
                "/etc/nginx/conf.d/default.conf"]
+     depends_on:
+      - web
   letsencrypt:
     image: jrcs/letsencrypt-nginx-proxy-companion
     environment:
@@ -39,6 +41,8 @@ services:
     volumes:
       - nginx_certs:/etc/nginx/certs:rw
       - /var/run/docker.sock:/var/run/docker.sock:ro
+    depends_on:
+      - nginx_gen
 volumes:
   nginx_conf: {}
   nginx_vhost: {}
