--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - "80"
     working_dir: /app/src
     command: python3 -m http.server --bind 0.0.0.0 80
+    depends_on:
+      - letsencrypt
   nginx:
     image: nginx
     container_name: nginx
@@ -30,8 +32,6 @@ services:
        - /var/run/docker.sock:/tmp/docker.sock:ro
      command: ["-notify-sighup", "nginx", "-watch", "-wait", "5s:30s", "/etc/docker-gen/templates/nginx.tmpl", \
                "/etc/nginx/conf.d/default.conf"]
-     depends_on:
-      - web
   letsencrypt:
     image: jrcs/letsencrypt-nginx-proxy-companion
     environment:
