--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
      volumes:
        - ./nginx-proxy/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
        - /var/run/docker.sock:/tmp/docker.sock:ro
-     command: ["-notify-sighup", "nginx", "-watch", "-wait", "5s:30s", "/etc/docker-gen/templates/nginx.tmpl", \
+     command: ["-notify-sighup", "nginx", "-watch", "-wait", "5s:30s", "/etc/docker-gen/templates/nginx.tmpl",
                "/etc/nginx/conf.d/default.conf"]
   letsencrypt:
     image: jrcs/letsencrypt-nginx-proxy-companion
